package main;

public enum Sex {
    MALE,
    FEMALE
}