@startuml
!theme plain
hide circle
hide empty attributes
hide empty methods
skinparam classAttributeIconSize 0
top to bottom direction
'scale 2

title CaloriesCalculator

class CaloriesCalculator {
    + double calculate(Person person)
}

class Person {
    - String name
    - Sex sex
    - int weight
    - int height
    - int birthYear
    - int age
    - double dailyCalories
    - ActivityLevel activityLevel
    Person(String name, Sex sex, int weight, int height, int birthYear, ActivityLevel activityLevel)
    - calcAge()
    + getDailyCalories()
}

enum ActivityLevel <<enumeration>> {
    SEDENTARY
    LIGHTLY_ACTIVE
    MODERATELY_ACTIVE
    VERY_ACTIVE
    - double multiplier
    - String[] aliases
    ActivityLevel(double multiplier, String[] aliases)
    + getMultiplier()
    + getAliases()
}

enum Sex <<enumeration>> {
    MALE
    FEMALE
}

ActivityLevel <-- Person
Sex <-- Person
@enduml